--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
                         <div class="menu_bg_list">
                             <ul class="menu_item">
                                 <li>
-                                    <h2>Hotel Introduction</h2>
-                                    <p>飯店簡介</p>
+                                    <a href="introduction.html">
+                                        <h2>Hotel Introduction</h2>
+                                        <p>飯店簡介</p>
+                                    </a>
+                                  
                                 </li>
                                 <li>
                                     <h2>Service Facilities</h2>
