--- a/index.html
+++ b/index.html
@@ -88,31 +88,39 @@
                         <div class="menu_bg_list">
                             <ul class="menu_item">
                                 <li>
-                                    <a href="introduction.html">
+                                    <a href="page/introduction.html">
                                         <h2>Hotel Introduction</h2>
                                         <p>飯店簡介</p>
                                     </a>
-                                  
+
                                 </li>
                                 <li>
-                                    <h2>Service Facilities</h2>
-                                    <p>服務設施</p>
+                                    <a href="page/servers.html">
+                                        <h2>Service Facilities</h2>
+                                        <p>服務設施</p>
+                                    </a>
                                 </li>
                                 <li>
                                     <h2>Room Introduction</h2>
                                     <p>客房介紹</p>
                                 </li>
                                 <li>
-                                    <h2>Traffic Location</h2>
-                                    <p>交通位置</p>
+                                    <a href="page/location.html">
+                                        <h2>Traffic Location</h2>
+                                        <p>交通位置</p>
+                                    </a>
                                 </li>
                                 <li>
-                                    <h2>News and Events</h2>
-                                    <p>新訊與活動</p>
+                                    <a href="page/latest.html">
+                                        <h2>News and Events</h2>
+                                        <p>新訊與活動</p>
+                                    </a>
                                 </li>
                                 <li>
-                                    <h2>Contact us</h2>
-                                    <p>聯絡我們</p>
+                                    <a href="page/contact.html">
+                                        <h2>Contact us</h2>
+                                        <p>聯絡我們</p>
+                                    </a>
                                 </li>
                             </ul>
                             <div class="top_box">
@@ -814,7 +822,7 @@
                 $(window).scroll(showMenu);
 
                 $(function() {
-                    $(".footerpage").load("footer.html");
+                    $(".footerpage").load("layout/footer.html");
                     $(".inner_close").on("click", function() {
                         $(".start_ad").toggleClass("off");
                         $(".start_ad").removeClass("on");
